<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    tools:context=".gruppo.InvitiGruppi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/NomeMembro"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nome_gruppo_riga"
            android:textColor="#000000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="355dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/accettaInvito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accetta" />

            <Button
                android:id="@+id/rifiutaInvito"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rifiuta" />
        </LinearLayout>

        <TextView
            android:id="@+id/idGruppoInvito"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_weight="1"
            android:text="TextView"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>
